<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".meal_recipty.MealDetailActivity">


    <ImageView
        android:id="@+id/ivDetailPhoto"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="15dp"
        android:src="@color/purple_700"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="31dp" />



    <TextView
        android:id="@+id/tvTitle_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/meal_name"
        android:layout_marginTop="25dp"
        android:textSize="21dp"
        android:textStyle="bold"
        android:layout_below="@id/ivDetailPhoto"/>

    <TextView
        android:id="@+id/tvDetailMealName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivDetailPhoto"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="52dp"
        android:layout_toEndOf="@+id/tvTitle_name"
        android:text="@string/meal_name"
        android:textSize="19sp"
        android:textStyle="bold" />



    <TextView
        android:id="@+id/ivMealCate_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:layout_marginTop="18dp"
        android:textSize="21dp"
        android:textStyle="bold"
        android:layout_below="@id/tvTitle_name"/>

    <TextView
        android:id="@+id/ivMealCate_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvDetailMealName"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="39dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="52dp"
        android:layout_toEndOf="@+id/ivMealCate_label"
        android:text="@string/category"
        android:textSize="19sp"
        android:textStyle="bold" />



    <TextView
        android:id="@+id/ivMealArea_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/area"
        android:layout_marginTop="18dp"
        android:textSize="21dp"
        android:textStyle="bold"
        android:layout_below="@id/ivMealCate_name"/>


    <TextView
        android:id="@+id/ivMealArea_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/ivMealCate_name"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="87dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="52dp"
        android:layout_toEndOf="@+id/ivMealArea_label"
        android:text="@string/area"
        android:textSize="19sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/ivMealIng1_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingredients"
        android:layout_marginTop="18dp"
        android:textSize="21dp"
        android:textStyle="bold"
        android:layout_below="@id/ivMealArea_label"/>


    <TextView
        android:id="@+id/ivMealIng1_name"
        android:layout_width="223dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/ivMealArea_name"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="29dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="52dp"
        android:layout_toEndOf="@+id/ivMealIng1_label"
        android:text="Ing1"
        android:textSize="19sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/ivMealIng2_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/ivMealIng1_label"
        android:layout_marginTop="46dp"
        android:text="@string/ingredients"
        android:textSize="21dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/ivMealIng2_name"
        android:layout_width="223dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/ivMealIng1_name"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="29dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="52dp"
        android:layout_toEndOf="@+id/ivMealIng2_label"
        android:text="Ing2"
        android:textSize="19sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/ivMealIng3_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/ivMealIng2_label"
        android:layout_marginTop="46dp"
        android:text="@string/ingredients"
        android:textSize="21dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/ivMealIng3_name"
        android:layout_width="223dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/ivMealIng2_name"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="29dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="52dp"
        android:layout_toEndOf="@+id/ivMealIng3_label"
        android:text="Ing2"
        android:textSize="19sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/ivMealIng4_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/ivMealIng3_label"
        android:layout_marginTop="46dp"
        android:text="@string/ingredients"
        android:textSize="21dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/ivMealIng4_name"
        android:layout_width="223dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/ivMealIng3_name"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="29dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="52dp"
        android:layout_toEndOf="@+id/ivMealIng4_label"
        android:text="Ing2"
        android:textSize="19sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/ivMealIn5_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/ivMealIng4_label"
        android:layout_marginTop="53dp"
        android:text="@string/ingredients"
        android:textSize="21dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/ivMealIng5_name"
        android:layout_width="223dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/ivMealIng4_name"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="29dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="52dp"
        android:layout_toEndOf="@+id/ivMealIn5_label"
        android:text="Ing2"
        android:textSize="19sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/tvReceiptInstructionsDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivDetailPhoto"
        android:layout_marginTop="375dp"
        android:padding="20dp"
        android:text="@string/detail_reciopt_txt"
        android:textSize="15dp" />

</RelativeLayout>